# FastBinaryEncoding

./: .appveyor.yml  .gitattributes  .gitignore  .gitlinks  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  annotated.html  class_f_b_e_1_1_generator-members.html  class_f_b_e_1_1_generator.html  class_f_b_e_1_1_generator_c_sharp-members.html  class_f_b_e_1_1_generator_c_sharp.html  class_f_b_e_1_1_generator_cpp-members.html  class_f_b_e_1_1_generator_cpp.html  class_f_b_e_1_1_generator_go-members.html  class_f_b_e_1_1_generator_go.html  class_f_b_e_1_1_generator_java-members.html  class_f_b_e_1_1_generator_java.html  class_f_b_e_1_1_generator_java_script-members.html  class_f_b_e_1_1_generator_java_script.html  class_f_b_e_1_1_generator_kotlin-members.html  class_f_b_e_1_1_generator_kotlin.html  class_f_b_e_1_1_generator_python-members.html  class_f_b_e_1_1_generator_python.html  class_f_b_e_1_1_generator_ruby-members.html  class_f_b_e_1_1_generator_ruby.html  class_f_b_e_1_1_generator_swift-members.html  class_f_b_e_1_1_generator_swift.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  fbe-lexer_8cpp.html  fbe-lexer_8cpp_source.html  fbe-parser_8cpp.html  fbe-parser_8cpp_source.html  fbe-parser_8hpp.html  fbe-parser_8hpp_source.html  (+208 more)
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msys2.yml  build-windows-vs.yml
documents/: Doxyfile  FBE.md
documents/html/: annotated.html  class_f_b_e_1_1_generator-members.html  class_f_b_e_1_1_generator.html  class_f_b_e_1_1_generator_c_sharp-members.html  class_f_b_e_1_1_generator_c_sharp.html  class_f_b_e_1_1_generator_cpp-members.html  class_f_b_e_1_1_generator_cpp.html  class_f_b_e_1_1_generator_java-members.html  class_f_b_e_1_1_generator_java.html  class_f_b_e_1_1_generator_java_script-members.html  class_f_b_e_1_1_generator_java_script.html  class_f_b_e_1_1_generator_python-members.html  class_f_b_e_1_1_generator_python.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  fbe-lexer_8cpp.html  fbe-lexer_8cpp_source.html  fbe-parser_8cpp.html  fbe-parser_8cpp_source.html  fbe-parser_8hpp.html  fbe-parser_8hpp_source.html  fbe_8cpp.html  fbe_8cpp_source.html  fbe_8h.html  fbe_8h_source.html  fbe_8inl.html  fbe_8inl_source.html  files.html  functions.html  functions_func.html  functions_vars.html  generator_8h.html  generator_8h_source.html  generator_8inl.html  generator_8inl_source.html  generator__cpp_8cpp.html  generator__cpp_8cpp_source.html  generator__cpp_8h.html  generator__cpp_8h_source.html  (+93 more)
documents/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_16.js  all_17.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_d.js  classes_2.js  classes_5.js  defines_0.js  (+26 more)
examples/: create.cpp  print.cpp  print_json.cpp  send_receive.cpp  serialization.cpp  serialization_final.cpp  serialization_json.cpp
images/: array.ai  bool.ai  byte.ai  bytes.ai  char.ai  decimal.ai  enum.ai  flags.ai  float.ai  hash.ai  int.ai  list.ai  map.ai  optional.ai  string.ai  struct-final.ai  struct.ai  timestamp.ai  uuid.ai  vector.ai  wchar.ai
include/: fbe.h  fbe.inl  generator.h  generator.inl  generator_cpp.h  generator_cpp.inl  generator_csharp.h  generator_csharp.inl  generator_go.h  generator_go.inl  generator_java.h  generator_java.inl  generator_javascript.h  generator_javascript.inl  generator_kotlin.h  generator_kotlin.inl  generator_python.h  generator_python.inl  generator_ruby.h  generator_ruby.inl  generator_swift.h  version.h
modules/: CMakeLists.txt  rapidjson.cmake
performance/: deserialize.cpp  deserialize_final.cpp  deserialize_json.cpp  receiver.cpp  sender.cpp  serialize.cpp  serialize_final.cpp  serialize_json.cpp  verify.cpp  verify_final.cpp
projects/.NETCore/: .gitignore  FastBinaryEncoding.sln
projects/CSharp/: .gitignore  FastBinaryEncoding.sln
projects/Java/: .gitignore  pom.xml
projects/JavaScript/: .airtap.yml  .gitignore  .npmignore  package-lock.json  package.json
projects/Kotlin/: .gitignore
projects/Python/: .gitignore  setup.py
projects/Swift/: .gitignore  .swiftlint.yml  Package.swift  client.fbe  config.fbe  core.fbe  history.fbe  manager.fbe  proto.fbe  protoex.fbe  storage.fbe  test.fbe
proto/: enum.fbe  enums.cpp  enums.fbe  enums.h  enums.inl  enums_final_models.cpp  enums_final_models.h  enums_final_protocol.cpp  enums_final_protocol.h  enums_json.h  enums_models.cpp  enums_models.h  enums_protocol.cpp  enums_protocol.h  fbe.cpp  fbe.h  fbe_final_models.cpp  fbe_final_models.h  fbe_final_models.inl  fbe_json.h  fbe_models.cpp  fbe_models.h  fbe_models.inl  fbe_protocol.cpp  fbe_protocol.h  proto.cpp  proto.fbe  proto.h  proto.inl  proto_final_models.cpp  proto_final_models.h  proto_final_protocol.cpp  proto_final_protocol.h  proto_json.h  proto_models.cpp  proto_models.h  proto_protocol.cpp  proto_protocol.h  protoex.cpp  protoex.fbe  (+24 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+71 more)
source/: .gitignore  FieldModelOrder.go  fbe-lexer.cpp  fbe-parser.cpp  fbe-parser.hpp  fbe.cpp  fbe.l  fbe.y  generator.cpp  generator_cpp.cpp  generator_csharp.cpp  generator_go.cpp  generator_java.cpp  generator_javascript.cpp  generator_kotlin.cpp  generator_python.cpp  generator_ruby.cpp  generator_swift.cpp
tests/: test.h  test_clone.cpp  test_create.cpp  test_decimal.cpp  test_enums.cpp  test_extending.cpp  test_send_receive.cpp  test_send_receive_final.cpp  test_serialization.cpp  test_serialization_final.cpp  test_serialization_json.cpp
(+4682 files in other folders)
